# cella-nova

./: .gitignore  Cargo.toml  NEXT_STEPS.md  README.md  ml_rs_example.ppm  pyproject.toml  pyrightconfig.json  rust-toolchain.toml
fl-rs/: lib.rs  main.rs  profile.rs  save_pngs.rs
fl-rs/orchestrator/: convolution.rs  mod.rs  phase2.rs
fl-rs/shaders/: compute.wgsl  compute_1024.wgsl  compute_128.wgsl  compute_256.wgsl  compute_512.wgsl  compute_64.wgsl
ml-rs/: audio.rs  config.rs  example.rs  lib.rs  main.rs  profile.rs  save_pngs.rs
ml-rs/orchestrator/: convolution.rs  diffusion.rs  growth.rs  mod.rs  render.rs
ml-rs/shaders/: compute_1024.wgsl  compute_128.wgsl  compute_2048.wgsl  compute_256.wgsl  compute_512.wgsl  compute_64.wgsl
reference/: main.rs  save_pngs.rs
scripts/: integration.sh
seed/: glider.json
src/: fft.rs  gpu_flow_lenia.rs  growth_functions.rs  kernels.rs  lenias.rs  lib.rs  main.rs  wfft.rs
src/orchestrator/: convolution.rs  mod.rs  phase2.rs
src/shaders/: bit_reverse.wgsl  channel_aggregate.wgsl  complex_mul.wgsl  compute.wgsl  copy_to_conv.wgsl  fft_stage.wgsl  flow_field.wgsl  growth_flow.wgsl  normalize.wgsl  reintegration.wgsl  render.wgsl  render_fragment.wgsl  render_vertex.wgsl  sobel.wgsl  sum_channels.wgsl
train/: compare_pngs.py  convert_demo_to_creature.py  diff_lenia_org.py  fine_tune_kernel.py  finetune_kernel.py  flowlenia_org.py  generate_kernel_json.py  lenia_org.py  save_frames_png.py  train_lenia.py
train/utils/: __init__.py  dev_module.py  leniaparams.py  noise_gen.py
