[package]
name = "cella-nova"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ml-rs"
path = "ml-rs/main.rs"

[[bin]]
name = "ml-rs-profile"
path = "ml-rs/profile.rs"

[[bin]]
name = "ml-rs-save-pngs"
path = "ml-rs/save_pngs.rs"

[[bin]]
name = "ml-rs-debug-fft"
path = "ml-rs/debug_fft.rs"

[dependencies]
num-complex = "0.4.2"
wgpu = "0.16"
pollster = "0.4"
bytemuck = { version = "1.16", features = ["extern_crate_alloc", "derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustfft = "6.2"
image = "0.24"
clap = { version = "4", features = ["derive"] }
